# House-prediction

./: .env.example  .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yaml  dvc.yaml  pyproject.toml  setup.py
.dvc/: config
.github/workflow/: test.yml
.github/workflows/: Docker.yaml  docker-image.yml  flake8.yml  lint.yml  main.yml  pytest.yml  stale_issues.yml  test.yml
Docker/mlflow_image/: Dockerfile
Docker/model_service/: .env  Dockerfile  pyproject.toml
data/interim/: clean_raw_data.csv.dvc  parks_features.csv.dvc  raw_features.csv.dvc  spb_house_with_park.csv.dvc  spb_house_with_subway.csv.dvc  subways_features.csv.dvc
data/processed/: df_spb_processed.csv.dvc  x_test.npy.dvc  x_trainval.npy.dvc  y_test.npy.dvc  y_trainval.npy.dvc
data/raw/: all_v2.csv.dvc  df_spb.csv.dvc
docs/: conf.py
models/: model.clf.dvc
notebooks/: EDA.ipynb  Saint-Peterburg_real_estate.ipynb  saint-petersburg-real-estate-market.ipynb
postman_sample_requests/: parcel.npy
reports/figures/: results.json.dvc
src/: main.py  seed.py
src/app/: inference.py
src/data/: clean_raw.py  dataset_functions.py  get_external.py  get_interim.py  get_parks.py  get_processed.py  get_raw.py  get_subways.py  make_data.py  make_dataset.py  make_datasets.py  make_raw.py  park_features.py  process_external.py  raw_features.py  select_region.py  subway_dataset.py  subway_features.py
src/features/: clean_raw.py  features_functions.py  get_processed.py  make_features.py  process_external.py  subway_feature.py  subway_features.py
src/models/: evaluate.py  prepare.py  train.py
src/test/: test_clean_raw.py  test_get_prepare.py  test_get_processed.py  test_get_train.py  test_select_region.py
src/visualization/: correlation.py  scalers.py  visualize.py
workflow/: Snakefile  config.yaml
