[tool.poetry]
name = "house-prediction"
version = "1"
description = ""
authors = ["Aleksandr Dubrovin <dubrovinmail@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
pandas = "^1.4.2"
mlflow = "^1.25.1"
dvc = "^2.10.2"
boto3 = "^1.23.9"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
matplotlib = "^3.5.2"
click = "^8.1.3"
jupyter = "^1.0.0"
lightgbm = "^3.3.2"
xgboost = "^1.6.0"
sklearn = "^0.0"
kaggle = "^1.5.12"
black = {extras = ["d"], version = "^22.3.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
